--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ psutil @ file:///D:/bld/psutil_1740663155517/work
 pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
 Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1750615794071/work
 python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_python-dateutil_1751104122/work
-pywin32==307
+pywin32==307, 308
 pyzmq @ file:///D:/bld/pyzmq_1749898480773/work
 six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
 stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
